--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 backend/.env
 backend/deploy.md
 backend/RAILWAY_DEPLOYMENT_SUMMARY.md
+backend/dist
+backend/node_modules
+RAILWAY_DEPLOYMENT_FIXED.md
