--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ backend/RAILWAY_DEPLOYMENT_SUMMARY.md
 backend/dist
 backend/node_modules
 RAILWAY_DEPLOYMENT_FIXED.md
+backend/RAILWAY_DOCKER_FIX.md
