--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ backend/node_modules
 RAILWAY_DEPLOYMENT_FIXED.md
 backend/RAILWAY_DOCKER_FIX.md
 backend/TYPESCRIPT_BUILD_FIXED.md
+UUID_ESM_ERROR_FIXED.md
